--- a/app/views/admin/competitions/view_posted.html.erb
+++ b/app/views/admin/competitions/view_posted.html.erb
@@ -1,5 +1,7 @@
 <h1><%=t '.caption' %></h1>
 
+<%= will_paginate @competition_photos %>
+
 <table class="table table-striped">
   <thead>
     <tr >
