--- a/app/views/jury/choose_competition.html.erb
+++ b/app/views/jury/choose_competition.html.erb
@@ -1,7 +1,7 @@
 <h3><%= t("jury_choose_competition") %></h3>
 
 
-<%= simple_form_for :jury, :url => jury_view_photos_path do |f| %>
+<%= simple_form_for :jury, :url => jury_view_photos_path, method: :get do |f| %>
    
     <div class="form-group">
     	<%= f.input :competition_id, selected: 1, label: t("competition_"), collection: @competitions, label_method: :title, value_method: :id, :input_html => {class: "form-control"}  %>
