--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,9 @@
 <div class="span8">
 <%= will_paginate @users %>
 <br/>
+<%= link_to "Все пользователи", users_path %> |
+<%= link_to "Выбрать роль", select_roles_users_path %>
 
-<%= link_to "Select roles", select_roles_users_path %>
 <br>
 <table class="table table-condensed">
   <thead>
