--- a/app/views/competitions/view_photos.html.erb
+++ b/app/views/competitions/view_photos.html.erb
@@ -1,20 +1,22 @@
-<% breadcrumb :view_competition_photos, @competition %>
+<% breadcrumb :view_competition_photos, @competition, @nomination %>
 
 <br>
 <%= link_to "Положение о конкурсе", competition_path(@competition) %>
 
-<h1>Конкурсные фотографии</h1>
+<h1><%= @competition.title %></h1>
+
+<h2>Конкурсные фотографии</h2>
  <%= will_paginate @competition_photos %>
 <br>
 
-  <% @by_nomination.each_key do |nomination| %>
-    <h2> <%= nomination %></h2>
+  
+    <h3> <%= @nomination.title %></h3>
+ 
     <div class="row">
       
-      <% @by_nomination[nomination].each_with_index do |competition_photo,index| %>
+      <% @competition_photos.each_with_index do |competition_photo,index| %>
       
         <div class="col-sm-3 thumb">
-       
           <%= render partial: "photos/thumb", locals: { photo: competition_photo.photo, path: gallery_show_anonymous_path(competition_photo.photo) } %>
 
         <%- l0 = "#{competition_photo.jury_count} / #{@all_jury_count}" %>
@@ -22,7 +24,7 @@
         
         <% if can?(:read, Competition)  %>
         <%- icon = competition_photo.liked_by(@user) ? unlike_icon("like#{competition_photo.id}") : like_icon("like#{competition_photo.id}") %>
-        <%- l2 = link_to(icon, like_path(competition_photo), remote: true) if @can_like%>
+        <%- l2 = link_to(icon, like_path(competition_photo), remote: true) if can? :like, @competition %>
         <% end %>
 
         <%= render partial: "photos/caption", locals: { photo: competition_photo.photo, links: [l0,l1,l2] } %>
@@ -34,7 +36,7 @@
     
   </div>
 
-  <% end  %>
+
 
 
   
