--- a/app/views/competitions/view_nominations.html.erb
+++ b/app/views/competitions/view_nominations.html.erb
@@ -2,6 +2,7 @@
 
 <h1><%= @competition.title %></h1>
 
+<%= link_to "Положение о конкурсе", competition_path(@competition) %>
 
 <ul class="list-unstyled">
 
