Pagination for results

--- a/app/views/competitions/results.html.erb
+++ b/app/views/competitions/results.html.erb
@@ -3,7 +3,7 @@
 <h2><%= t('competition_results') %></h2>
 <h1><%= @competition.title %></h1>
 
-
+<%= will_paginate @competition_photos %>
 
 <h3> <%= @nomination.title %></h3>
 
