--- a/app/views/layouts/_moder_photo_sidebar.html.erb
+++ b/app/views/layouts/_moder_photo_sidebar.html.erb
@@ -8,6 +8,6 @@
 			<li><%= link_to "Неопубликованные",admin_photos_path(scope: :unpublished) %></li>
 			<li><%= link_to "18+",admin_photos_path(scope: :adults) %></li>
       <li><%= link_to "Удаленные", admin_photos_path(scope: :deleted)  %></li>
-      <li><%= link_to "Ревью",review_admin_photos_path(scope: :review)  %></li>
+      <li><%= link_to "Ревью", admin_photos_path(scope: :review)  %></li>
      
 </ul>
