Next, prev methods for Photo

--- a/app/views/admin/photos/index.html.erb
+++ b/app/views/admin/photos/index.html.erb
@@ -18,7 +18,7 @@
       <% l5 = exclaim_icon unless photo.seen %>
       
       <%= render partial: "photos/caption", locals: { photo: photo, links: [l1,l2,l3,l4,l5] } %>
-      <%= render partial: "photos/thumb", locals: { photo: photo, path: admin_photo_path(photo, photo_ids: @photos.map(&:id).join(",")), user: current_user, agreed: session[:agreed] } %>
+      <%= render partial: "photos/thumb", locals: { photo: photo, path: admin_photo_path(photo, scope: @scope), user: current_user, agreed: session[:agreed] } %>
 
       
       
