--- a/app/views/admin/photos/show.html.erb
+++ b/app/views/admin/photos/show.html.erb
@@ -1,6 +1,6 @@
 <div style="float: right">
-<%= link_to backward_icon, admin_photo_path(@prior_photo_id, photo_ids: @photo_ids) if @prior_photo_id %>
-<%= link_to forward_icon, admin_photo_path(@next_photo_id,photo_ids: @photo_ids) if @next_photo_id %>
+<%= link_to backward_icon, admin_photo_path(@prior_photo_id, scope: @scope) if @prior_photo_id %>
+<%= link_to forward_icon, admin_photo_path(@next_photo_id, scope: @scope) if @next_photo_id %>
 </div>
 
 <%= render partial: "photos/image", locals: { photo: @photo } %>
