--- a/app/views/admin/competitions/_form.html.erb
+++ b/app/views/admin/competitions/_form.html.erb
@@ -15,6 +15,11 @@
     </div>
 
     <div class="form-group">
+    <%= f.input :num_stars, input_html: { value: @competition.num_stars ? @competition.num_stars : 10 } %>
+    </div>
+
+
+    <div class="form-group">
     <%= f.input :description,  :input_html => {:class => "redactor form-control"} %>
     </div>
    
