--- a/app/views/jury/view_photos.html.erb
+++ b/app/views/jury/view_photos.html.erb
@@ -22,7 +22,7 @@
     <tr>
 
       <td>
-        <%= link_to image_tag(competition_photo.photo.image_url(:thumb), class: "img-responsive"), photo_view_path(competition_photo.photo) %>
+        <%= link_to image_tag(competition_photo.photo.image_url(:thumb), class: "img-responsive"), jury_show_path(competition_photo.photo) %>
       </td>  
       
       <td>
