Fix translations for admin photos index

--- a/app/views/layouts/_moder_photo_sidebar.html.erb
+++ b/app/views/layouts/_moder_photo_sidebar.html.erb
@@ -7,7 +7,7 @@
 			<li><%= link_to "Последние 24 часа",admin_photos_path(scope: :last_24) %></li>
 			<li><%= link_to "Неопубликованные",admin_photos_path(scope: :unpublished) %></li>
 			<li><%= link_to "18+",admin_photos_path(scope: :adults) %></li>
-      <li><%= link_to "Удаленные", admin_photos_path(scope: :deleted)  %></li>
+      <li><%= link_to "Удаленные", admin_photos_path(scope: :deleted_photos)  %></li>
       <li><%= link_to "Ревью", admin_photos_path(scope: :review)  %></li>
      
 </ul>
