--- a/app/views/admin/competitions/_form.html.erb
+++ b/app/views/admin/competitions/_form.html.erb
@@ -15,15 +15,17 @@
     </div>
 
     <div class="form-group">
-    <%= f.input :num_stars, input_html: { value: @competition.num_stars ? @competition.num_stars : 10 } %>
+    <%= f.input :accept_date %>
     </div>
 
+    <div class="form-group">
+    <%= f.input :num_stars, input_html: { value: @competition.num_stars ? @competition.num_stars : 10 } %>
+    </div>
 
     <div class="form-group">
     <%= f.input :description,  :input_html => {:class => "redactor form-control"} %>
     </div>
-   
-    
+ 
     <div class="form-group">
     <%= f.input :type_id,collection: Competition::TYPES, label_method: Competition::LABEL, value_method: Competition::VALUE,
     :input_html => {class: "form-control"}%>
