--- a/app/views/admin/competitions/index.html.erb
+++ b/app/views/admin/competitions/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th><%= t(".title") %></th>
       <th><%= t(".type") %></th>
+      <th><%= t(".accept_date") %></th>
       <th><%= t(".last_date") %></th>
       <th><%= t(".open_date") %></th>
       <th></th>
@@ -19,6 +20,7 @@
       <tr>
         <td><%= link_to competition.title, admin_competition_path(competition) %></td>
         <td><%= competition.open? ? green_label(t("open")) : red_label(t("private")) %></td>
+        <td><%= ld competition.accept_date %></td>
         <td><%= ld competition.last_date %></td>
         <td><%= content_tag(:span,ld(competition.open_date),class: competition_class(competition)) %></td>
         <td><%= link_to(list_icon, stats_admin_competition_path(competition),:title =>"Статистика") %></td>
