--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,7 +23,7 @@
     <tr>
       <td><%= link_to user.full_name, user %></td>
       <td><%= user.email %></td>
-      <td><%= l(user.created_at.to_date) %></td>
+      <td><%= ld(user.created_at.to_date) %></td>
       
       <td>
       <span id="confirm<%= user.id %>">
