--- a/app/views/admin/settings/_form.html.erb
+++ b/app/views/admin/settings/_form.html.erb
@@ -18,6 +18,10 @@
     <%= f.input :articles, :input_html => {data: {load:  Article.selected_ids(@admin_setting.articles).map {|a| {id: a.id,name: a.title}}   }} %>
     </div>
 
+    <div class="form-group">
+    <%= f.input :novelties, :input_html => {data: {load:  Novelty.selected_ids(@admin_setting.novelties).map {|a| {id: a.id,name: a.title}}   }} %>
+    </div>
+
    <div class="form-group">
     <%= f.input :footer,:input_html => {class: "form-control"} %>
    </div>
@@ -36,6 +40,8 @@
 
 
 $('#admin_setting_articles').tokenInput('/ajax/articles',{theme: 'facebook',prePopulate: $('#admin_setting_articles').data('load')})
+
+$('#admin_setting_novelties').tokenInput('/ajax/novelties',{theme: 'facebook',prePopulate: $('#admin_setting_novelties').data('load')})
 
   
 
