Exclude 0 from jury rating stats

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -76,7 +76,7 @@
 
 <script>
 $(document).ready(function() {
-   $("input.date_picker").datepicker({yearRange: "<%= Time.zone.now.year - 90%>:<%= Time.zone.now.year - 5%>"});
-   $.datepicker.setDefaults($.datepicker.regional["<%= I18n.locale %>"]);
+   // $("input.date_picker").datepicker({yearRange: "<%= Time.zone.now.year - 90%>:<%= Time.zone.now.year - 5%>"});
+   // $.datepicker.setDefaults($.datepicker.regional["<%= I18n.locale %>"]);
  });
 </script>
