--- a/app/views/admin/competitions/index.html.erb
+++ b/app/views/admin/competitions/index.html.erb
@@ -9,9 +9,14 @@
       <th><%= t(".last_date") %></th>
       <th><%= t(".open_date") %></th>
       <th></th>
+      <% if current_user.has_role?("admin") %>
       <th></th>
       <th></th>
       <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <% end %>
     </tr>
   </thead>
 
@@ -24,13 +29,18 @@
         <td><%= ld competition.last_date %></td>
         <td><%= content_tag(:span,ld(competition.open_date),class: competition_class(competition)) %></td>
         <td><%= link_to(list_icon, stats_admin_competition_path(competition),:title =>"Статистика") %></td>
+
+          
+        <% if current_user.has_role?("admin") %>
         <td><%= link_to(jury_icon, admin_competition_jury_index_path(competition),class: "jury_link","data-toggle" => "hello",:title =>"Жюри","data-animation" => "1") %></td>
         <td><%= link_to(nomination_icon, admin_competition_nominations_path(competition),:title =>"Номинации") %></td>
-  
         <td><%= link_to(photo_icon,  view_posted_admin_competition_path(competition),:title => "Фотографии") %></td>
         <td> <%= link_to users_icon, admin_competition_requests_path(competition) %> </td>
         <td><%= link_to edit_icon, edit_admin_competition_path(competition) %></td>
         <td><%= link_to del_icon, admin_competition_path(competition), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <% end %> 
+
       </tr>
     <% end %>
   </tbody>
