--- a/app/views/author/index.html.erb
+++ b/app/views/author/index.html.erb
@@ -21,4 +21,4 @@
 <br>
 <br>
 
-<small>* Пользователи сайта загрузившие фотографии (одну или более) </small>
+<small>* <%= t('authors_description') %> </small>
