--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -14,7 +14,7 @@
 <div class="row">
     
     <div class="col-lg-12">
-      <h1>Последние фотографии</h1>
+      <h1><%= t('last_photos') %></h1>
       
     </div>
 
