--- a/app/views/jury/view_photos.html.erb
+++ b/app/views/jury/view_photos.html.erb
@@ -4,6 +4,14 @@
 
 
 <%= will_paginate @competition_photos %>
+ 
+<p>
+  Всего <%= @should_jury %> 
+  осталось <%= @should_jury - @juried %> 
+</p>
+
+<%= link_to 'Все', jury_view_photos_path(@competition, :all) %>
+<%= link_to 'Нежуреные', jury_view_photos_path(@competition, :unrated) %>
 
 <table class="table table-striped">
   
@@ -11,9 +19,6 @@
     <td>Фотография</td>
     <td>Номинация</td>
     <td>Оценка
-      
-     
-
     </td>
   </tr>
 
