--- a/app/views/admin/competition_requests/_form.html.erb
+++ b/app/views/admin/competition_requests/_form.html.erb
@@ -12,6 +12,11 @@
     </div>
 
     <div class="form-group">
+        <%= f.input :permited_nomination_count, :input_html => {class: "form-control", value: @competition_request.competition.nominations.count} %>
+    </div>
+    
+
+    <div class="form-group">
         <%= f.input :answer, :input_html => {class: "form-control"} %>
     </div>
 
