--- a/app/views/devise/registrations/new.en.html.erb
+++ b/app/views/devise/registrations/new.en.html.erb
@@ -17,7 +17,7 @@
   <%= f.input :terms_of_service,  as: :boolean, :input_html => {style: "margin: 0px"} %>
   
 
-  <%= f.button :submit, 'Зарегистрироваться', :class => 'btn-primary' %>
+  <%= f.button :submit, t('sign_up'), :class => 'btn-primary' %>
   <br/>
   <br/>
 <% end %>
