--- a/app/views/jury/_nomination_form.html.erb
+++ b/app/views/jury/_nomination_form.html.erb
@@ -14,6 +14,6 @@
     </div>
     
     
-    <%= f.button :submit, value: I18n.t("save"), input_html: {class: "btn btn-default" } %>
+    <%= f.button :submit, value: t("filter"), input_html: {class: "btn btn-default" } %>
   
 <% end %>
