--- a/app/views/competitions/view_photos.html.erb
+++ b/app/views/competitions/view_photos.html.erb
@@ -3,7 +3,7 @@
 
 <h1><%= @competition.title %></h1>
 
-<h2>Конкурсные фотографии</h2>
+<h2><%= t('competition_photos') %></h2>
 
 
 <%= will_paginate @competition_photos %>
