--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.hidden_field :image_cache %>
 
     <div class="form-group">
-    <%= f.file_field :image,:input_html => {class: "form-control"} %>
+    <%= f.file_field :image, class: "form-control filestyle" %>
     </div>
 
     <div class="form-group">
