--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -60,7 +60,7 @@
   
   <div class="form-group">
   <p> <%= t("avatar_picture") %>: </p>
-  <%= f.file_field :avatar , :input_html => {class: "form-control"}  %>
+  <%= f.file_field :avatar, class: "form-control filestyle"  %>
   </div>
   
    <div class="form-group">
