--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,6 @@
 <h2><%= t("edit_user") %></h2>
 
+
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-vertical' }) do |f| %>
   
   
@@ -19,7 +20,7 @@
   </div>
 
   <div class="form-group">
-  <%= f.input :birth_date, start_year: Time.zone.now.year - 90, end_year: Time.zone.now.year - 8, as: :date_picker, :input_html => {class: "form-control", :autocomplete => "off"}  %>
+  <%= f.input :birth_date, as: :string, :input_html => {class: "form-control dp", :autocomplete => "off", :value => l(f.object.birth_date) } %>
   </div>
   
   <div class="form-group">
@@ -76,7 +77,9 @@
 
 <script>
 $(document).ready(function() {
-   // $("input.date_picker").datepicker({yearRange: "<%= Time.zone.now.year - 90%>:<%= Time.zone.now.year - 5%>"});
-   // $.datepicker.setDefaults($.datepicker.regional["<%= I18n.locale %>"]);
+  $('.dp').datepicker({
+    format: "dd.mm.yyyy",
+    language:  "<%= I18n.locale %>"
+});
  });
 </script>
