--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,8 +19,9 @@
   <%= f.input :last_name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   </div>
 
+  
   <div class="form-group">
-  <%= f.input :birth_date, as: :string, :input_html => {class: "form-control dp", :autocomplete => "off", :value => l(f.object.birth_date) } %>
+  <%= f.input :birth_date, as: :string, :input_html => {class: "form-control dp", :autocomplete => "off", :value => ld(f.object.birth_date) } %>
   </div>
   
   <div class="form-group">
