--- a/app/views/admin/request_forms/show.html.erb
+++ b/app/views/admin/request_forms/show.html.erb
@@ -5,17 +5,21 @@
   <tr>
     <th>ФИО</th>
     <th>Страна</th>
+    <th>Дата</th>
     <th>Решение</th>
     <th>Количество номинаций</th>  
+    <th>Примечания</th>  
   </tr>
 
-  <%- @competition.competition_requests.each do |request| %>
+  <%- @competition_requests.each do |request| %>
 
     <tr>
       <td><%= request.user_name %></td>
       <td><%= request.user.country_name %></td>
+      <td><%= ld request.created_at %></td>
       <td><%= request.decision %>  </td>
       <td><%= request.permited_nomination_count %></td>  
+      <td></td>
     </tr>
 
   <%- end %>
