--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -67,7 +67,7 @@ position:relative;right:50%;float:left;margin:0;list-style:none
 
 
 .back {
-    background: url('a.jpg');
+    background: asset_url('a.jpg');
 
 }
 
