--- a/app/views/layouts/_copyright.html.erb
+++ b/app/views/layouts/_copyright.html.erb
@@ -6,5 +6,6 @@
         <li><%= Admin::Setting.footer %></li>
         
       </ul><!-- breadcrumb -->
+      <%= render 'layouts/yandex_counter' %> 
     </nav><!-- nav -->
   </footer><!-- footer -->
