--- a/app/views/admin/competition_requests/index.html.erb
+++ b/app/views/admin/competition_requests/index.html.erb
@@ -6,6 +6,7 @@
   <thead>
     <tr>
       <th><%= t("competition_requests.index.user_name") %></th>
+      <th><%= t("competition_requests.index.permited_nomination_count") %></th>
       <th><%= t("competition_requests.index.decision") %></th>
     </tr>
   </thead>
@@ -14,8 +15,9 @@
     <% @competition_requests.each do |request| %>
       <tr>
         <td><%= link_to request.user_name, user_profile_path(request.user) %></td>
-        
+        <td> <%= request.permited_nomination_count %></td>
         <td> <%= request.decision %></td>
+        
         <td> <%= link_to(t("competition_requests.index.requests"), edit_admin_request_path(request),  class: "btn btn-primary")  %></td>
         
 
