--- a/app/views/admin/stats/index.html.erb
+++ b/app/views/admin/stats/index.html.erb
@@ -31,6 +31,7 @@
   </tbody>
 
 </table>
-
+h2 Пользователи
 <%= line_chart User.group('month(created_at)').count %>
-
+h2 Фотографии
+<%= line_chart Photo.group('month(created_at)').count %>
