Filter admin competition requests

--- a/app/views/admin/competition_requests/index.html.erb
+++ b/app/views/admin/competition_requests/index.html.erb
@@ -2,6 +2,8 @@
 
 <%= will_paginate @competition_requests %>
 
+<%= render partial: 'admin/competition_requests/filter_form' %>
+
 <table class="table table-striped">
   <thead>
     <tr>
