Сделал подсказки в итогах

--- a/app/views/competitions/results.html.erb
+++ b/app/views/competitions/results.html.erb
@@ -28,3 +28,20 @@
     
     
   </div>
+
+  <div class="row">
+  
+    <div class="col-md-3">
+      <sup><%= t('hints') %></sup>
+      <p class="small">
+        <span class="label label-warning"><%= t("place") %></span>
+        <span class="label label-success"><%= t("rating") %></span>
+        <span class="label label-info"><%= t("likes") %></span>
+      </p>  
+    </div>  
+  </div>  
+
+</div>
+
+
+
