Добавлены 3 новых поля в статистику

--- a/app/views/admin/stats/index.html.erb
+++ b/app/views/admin/stats/index.html.erb
@@ -27,6 +27,24 @@
         <td><%= @stats.active_ticket_count %></td>
     </tr>
 
+    <tr>
+        <td>Количество заявок на активные конкурсы</td>
+        <td><%= @stats.active_competition_requests %></td>
+    </tr>
+    
+    <tr>
+        <td>Количество заявок на активные конкурсы ожидающие решения</td>
+        <td><%= @stats.active_waiting_competition_requests %></td>
+    </tr>
+  
+    <tr>
+        <td>Количество фотографий на открытые конкурсы</td>
+        <td><%= @stats.active_photos %></td>
+    </tr>
+         
+        
+
+
 
   </tbody>
 
