Add All option to admin competition_request

--- a/app/views/admin/competition_requests/_filter_form.html.erb
+++ b/app/views/admin/competition_requests/_filter_form.html.erb
@@ -9,7 +9,8 @@
         label_method: CompetitionRequest::LABEL,
         value_method: CompetitionRequest::VALUE,
         input_html: { class: "form-control" },
-        selected: @response_id
+        selected: @response_id,
+        include_blank: "Все"
     %>
 
     </div>
